--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -19,15 +19,37 @@
             <li *ngFor="let genre of movie.genres;">{{ genre.name }}</li>
           </ul>
 
-          <ul>
-            <li *ngFor="let comment of movie.comments;">{{ comment.text }}</li>
-          </ul>
-
-          <input type="text" />
-          <button (click)="addComment()" type="button" >Commenter</button>
-
       </div>
-      <!-- Fin partie spécifique home page -->
+      <div>
+        <table mat-table [dataSource]="movie.comments" class="mat-elevation-z8 demo-table">
+
+          <!-- Id Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> N° </th>
+            <td mat-cell *matCellDef="let comment"> {{comment.id}} </td>
+          </ng-container>
+        
+          <!-- Name Column -->
+          <ng-container matColumnDef="text">
+            <th mat-header-cell *matHeaderCellDef> Text </th>
+            <td mat-cell *matCellDef="let comment"> {{comment.text}} </td>
+          </ng-container>
+
+          <!-- Date Column -->
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let comment"> {{comment.date | date:'short'}} </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator #paginator [pageSize]="5" [length]="5"
+        showFirstLastButtons></mat-paginator>
+
+        <input type="text" />
+        <button (click)="addComment()" type="button" >Commenter</button>
+      </div>
 
     </div>
 </div>
