--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -15,13 +15,33 @@
             <span class="meta">{{ movie.spoken_languages[0].name }} / {{ movie.runtime }} min. / {{ movie.release_date }}</span>
           </p>
 
-          <ul class="genres">
-            <li *ngFor="let genre of movie.genres;">{{ genre.name }}</li>
-          </ul>
+          <mat-chip-list class="genres">
+            <mat-chip *ngFor="let genre of movie.genres;">{{ genre.name }}</mat-chip>
+          </mat-chip-list>
+
+          <div class="card-container">
+            <mat-card class="card">
+              <mat-card-title>Leave your opinion !</mat-card-title>
+              <mat-card-subtitle>Or look at all the reviews already posted in the table below</mat-card-subtitle>
+              <mat-card-content>
+                <form [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+                    <mat-form-field appearance="fill">
+                        <mat-label for="comment">Comment</mat-label>
+                        <textarea matInput placeholder="" [formControl]="comment" formControlName="comment" required></textarea>
+                        <mat-error *ngIf="comment.invalid">{{getCommentError()}}</mat-error>
+                    </mat-form-field>
+                    <button mat-raised-button color="primary" class="card-submit">
+                        Post comment
+                    </button>
+                </form>
+              </mat-card-content>
+            </mat-card>
+          </div>
 
       </div>
-      <div>
-        <table mat-table [dataSource]="movie.comments" class="mat-elevation-z8 demo-table">
+
+      <div class="container">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
 
           <!-- Id Column -->
           <ng-container matColumnDef="id">
@@ -46,9 +66,6 @@
         </table>
         <mat-paginator #paginator [pageSize]="5" [length]="5"
         showFirstLastButtons></mat-paginator>
-
-        <input type="text" />
-        <button (click)="addComment()" type="button" >Commenter</button>
       </div>
 
     </div>
