--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="container">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" matSort (matSortChange)="sortComments($event)">
 
           <!-- Id Column -->
           <ng-container matColumnDef="id">
@@ -60,14 +60,14 @@
 
           <!-- Rating Column -->
           <ng-container matColumnDef="rating">
-            <th mat-header-cell *matHeaderCellDef> Rating </th>
+            <th mat-header-cell *matHeaderCellDef > Rating </th>
             <td mat-cell *matCellDef="let comment"> {{comment.rating}}/10 </td>
           </ng-container>
 
           <!-- Date Column -->
           <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> Date </th>
-            <td mat-cell *matCellDef="let comment"> {{comment.date | date:'short'}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+            <td mat-cell *matCellDef="let comment"> {{comment.date | date:'dd/MM/yyyy HH:mm'}} </td>
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
