ripple on genre

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,6 +6,7 @@
 </label>
 <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
-    <li *ngFor="let genre of genres;"><a (click)="selectGenre(genre)" [ngClass]="{'selected': genre.id === selected}">{{ genre.name }}</a></li>
+    <li *ngFor="let genre of genres;"><a (click)="selectGenre(genre)" [ngClass]="{'selected': genre.id === selected}" 
+        matRipple [matRippleRadius]="20" [matRippleCentered]="true">{{ genre.name }}</a></li>
     </ul>
 </div>
