--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
 
-      <div >
+      <div [ngClass]="{'hidden': filteredMovies.length > 0}" >Aucun film</div>
 
       </div>
 
