--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
     <a routerLink="/">
-      <img class="logo" src="../../assets/pictures/logo.png" />
+      <img class="logo" src="/assets/pictures/logo.png" />
     </a>
 </div>
